testdata/generated-yamls/front-end/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  labels:
    name: front-end
  name: front-end
spec: {}
status: {}
