testdata/generated-yamls/front-end/pod-graphql-a.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    name: graphql-a
  name: graphql-a
  namespace: front-end
spec:
  containers:
  - env:
    - name: PUBLIC_POD_NAME
      valueFrom:
        fieldRef:
          fieldPath: metadata.name
    - name: PUBLIC_NAMESPACE_NAME
      valueFrom:
        fieldRef:
          fieldPath: metadata.namespace
    image: cheriot/clitools:latest
    name: test-container
    ports:
    - containerPort: 3000
      name: http
      protocol: TCP
    resources: {}
  restartPolicy: Never
status: {}
